don't update payment class after decision status
payment classes are not to be updated after application is on decision status. We will use that value that is gotten from database.

Also did some static code analyze recommendation

#373

(cherry picked from commit 8d672e45e75c9c1f311d2fb8639493a365fb4268)