@@ -1,20 +1,5 @@
 package fi.hel.allu.servicecore.service;
 
-import java.net.URI;
-import java.time.ZonedDateTime;
-import java.util.*;
-import java.util.stream.Collectors;
-
-import org.apache.commons.lang3.BooleanUtils;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.core.ParameterizedTypeReference;
-import org.springframework.http.HttpEntity;
-import org.springframework.http.HttpMethod;
-import org.springframework.http.ResponseEntity;
-import org.springframework.stereotype.Service;
-import org.springframework.web.client.RestTemplate;
-import org.springframework.web.util.UriComponentsBuilder;
-
 import fi.hel.allu.common.domain.ApplicationDateReport;
 import fi.hel.allu.common.domain.ApplicationStatusInfo;
 import fi.hel.allu.common.domain.RequiredTasks;
@@ -30,6 +15,19 @@ import fi.hel.allu.servicecore.domain.*;
 import fi.hel.allu.servicecore.event.ApplicationEventDispatcher;
 import fi.hel.allu.servicecore.mapper.ApplicationMapper;
 import fi.hel.allu.servicecore.mapper.UserMapper;
+import org.apache.commons.lang3.BooleanUtils;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.core.ParameterizedTypeReference;
+import org.springframework.http.HttpEntity;
+import org.springframework.http.HttpMethod;
+import org.springframework.http.ResponseEntity;
+import org.springframework.stereotype.Service;
+import org.springframework.web.client.RestTemplate;
+import org.springframework.web.util.UriComponentsBuilder;
+
+import java.net.URI;
+import java.time.ZonedDateTime;
+import java.util.*;
 
 @Service
 public class ApplicationService {
@@ -107,7 +105,7 @@ public class ApplicationService {
    */
   public void replaceDistributionList(int id, List<DistributionEntryJson> distributionEntryJsons) {
     List<DistributionEntry> distributionEntries =
-        distributionEntryJsons.stream().map(entry -> applicationMapper.createDistributionEntryModel(entry)).collect(Collectors.toList());
+        distributionEntryJsons.stream().map(applicationMapper::createDistributionEntryModel).toList();
     restTemplate.postForEntity(
         applicationProperties.getApplicationDistributionListUrl(),
         distributionEntries,
@@ -128,8 +126,8 @@ public class ApplicationService {
       id
     );
     return Arrays.stream(result)
-      .map(entry -> applicationMapper.createDistributionEntryJson(entry))
-      .collect(Collectors.toList());
+      .map(applicationMapper::createDistributionEntryJson)
+            .toList();
   }
 
   /**
@@ -161,7 +159,7 @@ public class ApplicationService {
   public List<ApplicationTagJson> updateTags(int id, List<ApplicationTagJson> tags) {
     List<ApplicationTag> tagsWithUserInfo = tagsWithUserInfo(tags).stream()
             .map(t -> new ApplicationTag(t.getAddedBy(), t.getType(), t.getCreationTime()))
-            .collect(Collectors.toList());
+            .toList();
 
     ResponseEntity<ApplicationTag[]> response = restTemplate.exchange(
             applicationProperties.getTagsUrl(),
@@ -211,8 +209,9 @@ public class ApplicationService {
   Application updateApplication(int applicationId, ApplicationJson applicationJson) {
     applicationJson.setId(applicationId);
     applicationJson.setApplicationTags(tagsWithUserInfo(applicationJson.getApplicationTags()));
-    setPaymentClasses(applicationJson);
-
+    if(applicationJson.getStatus() != StatusType.DECISION){
+        setPaymentClasses(applicationJson);
+    }
     Integer currentUserId = userService.getCurrentUser().getId();
     HttpEntity<Application> requestEntity = new HttpEntity<>(applicationMapper.createApplicationModel(applicationJson));
     Application application = restTemplate.exchange(applicationProperties.getApplicationUpdateUrl(),
@@ -332,8 +331,7 @@ public class ApplicationService {
     if (tags != null) {
       UserJson currentUser = userService.getCurrentUser();
       return tags.stream()
-              .map(t -> tagWithUserInfo(currentUser, t))
-              .collect(Collectors.toList());
+              .map(t -> tagWithUserInfo(currentUser, t)).toList();
     }
     return tags;
   }
@@ -373,8 +371,7 @@ public class ApplicationService {
     HttpEntity<ApplicationIdentifier[]> result = restTemplate.getForEntity(uri, ApplicationIdentifier[].class);
 
     return Arrays.stream(result.getBody())
-        .map(applicationMapper::mapApplicationIdentifierToJson)
-        .collect(Collectors.toList());
+        .map(applicationMapper::mapApplicationIdentifierToJson).toList();
   }
 
 
@@ -454,8 +451,8 @@ public class ApplicationService {
 
   private ZonedDateTime getFirstInvoicingDateForApplication(Integer id) {
     return invoiceService.findByApplication(id).stream()
-      .filter(i -> i.getInvoicableTime() != null)
       .map(InvoiceJson::getInvoicableTime)
+      .filter(Objects::nonNull)
       .sorted()
       .findFirst()
       .orElse(null);
